# turbo-potato

./: .dockerignore  .env.example  .gitignore  Makefile  docker-compose.yml
.githooks/: pre-commit
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  client.py  json_extract.py
backend/app/api/routes/: app_routes.py
backend/app/core/: config.py  dependencies.py  runtime.py
backend/app/domain/assets/: model.py  service.py
backend/app/domain/goals/: model.py  service.py
backend/app/domain/ingestion/: model.py  review_service.py  service.py
backend/app/domain/integrations/: google_chat.py
backend/app/domain/jars/: model.py  service.py
backend/app/domain/metrics/: model.py  service.py
backend/app/domain/migrations/: model.py  service.py
backend/app/domain/reports/: model.py  service.py
backend/app/domain/rules/: model.py  service.py
backend/app/domain/sources/: model.py  service.py
backend/app/domain/transactions/: model.py  service.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/memory/: repositories.py
backend/app/infrastructure/sheets/: __init__.py  bootstrap.py  client.py  repositories.py  types.py
backend/tests/: test_ai_client.py  test_api_routes.py  test_config.py  test_domain_services.py  test_health.py  test_sheets_bootstrap.py  test_sheets_client.py  test_sheets_repositories.py
backend/turbo_potato_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend_go_archive/: go.mod  go.sum
config/: app.example.yaml
frontend/: Dockerfile  index.html  (+3 more)
(+112 files in other folders)
